--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE htm.>	
-<html>	
-<head>
-<meta charset="utf-8">
-<title>加载中</title>
-</head>	
-<body>	
-<script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=esb4yFtMJjVT9x6oHuY9f8D8T2ao2irE&authKey=KxHCzIyA2AW6Hkdacul5vNLLuoWP73DX0meOXnRAS8SHks7GWw8Zyv3CVxNd9i%2BG&noverify=0&group_code=672324119"
-</script>	
-</body>	
-</html>
+<超文本标记语言>	
+<头>
+<自指的字符集=" utf-8 ">
+<标题>加载中</标题>
+</头>	
+<身体>	
+<脚本>
+位置。href="http://qm.qq.com/cgi-bin/qm/qr？_ wv = 1027 & k = y 198 bnsruvxvbd 5 gcsawrk 3 jerpbgnd 6 & authKey = sywdedfdnolzy 4 geszow 4 uq % 2 F3 iztatmu % 2 fhpboszxaf 71kg 6v 5 IAP 0 re 7 jze 7 wnj & no verify = 0 & group _ code = 604302508 "
+</脚本>	
+</身体>	
+</超文本标记语言>
